add docs for cohort exercises
